add_connection&disconnection

--- a/OpenChat.API/appsettings.json
+++ b/OpenChat.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Deff": "Server=ROMASPPUR\\SQLEXPRESS;Database=OpenChat;Trusted_Connection=True;"
-    //"Deff": "Server=DESKTOP-9H63KDF\\SQLEXPRESS;Database=OpenChat;Trusted_Connection=True;"
+    //"Deff": "Server=ROMASPPUR\\SQLEXPRESS;Database=OpenChat;Trusted_Connection=True;"
+    "Deff": "Server=DESKTOP-9H63KDF\\SQLEXPRESS;Database=OpenChat;Trusted_Connection=True;"
   }
 }
